# PZIO

./: .gitignore  README.md  shell.nix
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: npm-build.yml  pytest.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/pzio/: __main__.py  config.py  conftest.py  db.py  main.py
backend/pzio/modules/admin/: models.py  router.py  schemas.py  service.py
backend/pzio/modules/admin/tests/: _helpers.py  test_activity_log.py  test_backups.py  test_task_types.py
backend/pzio/modules/auth/: __init__.py  deps.py  models.py  oauth.py  router.py  schemas.py  security.py  service.py
backend/pzio/modules/auth/tests/: test_login.py  test_register.py  test_security.py
backend/pzio/modules/communication/: __init__.py  base.py  deps.py  factory.py  mock.py  models.py  router.py  schemas.py  service.py
backend/pzio/modules/communication/tests/: test_comment_notifications.py  test_di.py  test_email_service.py
backend/pzio/modules/projects/: __init__.py  dependencies.py  deps.py  models.py  router.py  schemas.py  service.py  services.py
backend/pzio/modules/projects/tests/: test_projects.py
backend/pzio/modules/tasks/: REMOVE_ME.txt  models.py  router.py  schemas.py  service.py
backend/pzio/modules/tasks/tests/: __init__.py  test_task.py
backend/pzio/tests/: example.py  test_health.py
frontend/: .env.example  README.md  index.html  package-lock.json  package.json
frontend/src/api/: client.ts
frontend/src/components/: App.tsx  AppLayout.tsx
frontend/src/hooks/: REMOVE_ME.txt
frontend/src/modules/admin/: api.ts  schemas.ts  types.ts
frontend/src/modules/admin/components/: BackupsPanel.tsx  TaskHistoryViewer.tsx  TaskTypesPanel.tsx
frontend/src/modules/admin/pages/: AdminPanelPage.tsx
frontend/src/modules/auth/: AuthProvider.tsx  api.ts  context.ts  hooks.ts  schemas.ts  storage.ts  types.ts
frontend/src/modules/auth/components/: EditProfileForm.tsx  LoginForm.tsx  RegisterForm.tsx
frontend/src/modules/auth/pages/: LoginPage.tsx  ProfilePage.tsx  RegisterPage.tsx
frontend/src/pages/: HomePage.tsx
frontend/src/routes/: ProtectedRoute.tsx
