[project]
name = "pzio"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",          # REST API framework
    "uvicorn>=0.40.0",           # ASGI server for running FastAPI
    "sqlalchemy>=2.0.44",        # ORM for database interactions
    "pydantic-settings>=2.6.0",  # Typed env-driven configuration
    "pytest>=9.0.2",             # Testing framework
    "httpx>=0.28.1",             # HTTP client for testing FastAPI endpoints
]

[tool.setuptools.packages.find]
include = ["pzio*"]

[tool.black]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["pzio/tests", "pzio/modules"]
python_files = ["test_*.py"]
pythonpath = ["."]
