[project]
name = "pzio"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",          # REST API framework
    "uvicorn>=0.40.0",           # ASGI server for running FastAPI
    "sqlalchemy>=2.0.44",        # ORM for database interactions
    "pydantic[email]>=2.9.0",    # Schema validation incl. email format
    "pydantic-settings>=2.6.0",  # Typed env-driven configuration
    "bcrypt>=4.2.0",             # Password hashing (NFR04)
    "pyjwt>=2.10.0",             # JWT issuing / verification
    "pytest>=9.0.2",             # Testing framework
    "httpx>=0.28.1",             # HTTP client for testing FastAPI endpoints
]

[tool.setuptools.packages.find]
include = ["pzio*"]

[tool.black]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["pzio/tests", "pzio/modules"]
pythonpath = ["."]
